Regression: Group Insert operator creates invalid links #108141

Closed
opened 2023-05-22 11:58:20 +02:00 by Lukas Tönne · 6 comments
Member

Blender Version
Broken: 7f4aa0b5
Broken: 3.5.1
Worked: 3.4.1, 3.3.6

Behavior changed in fa3ca9afdb

Short description of error
If a node is already connected to a group, inserting nodes into a group using the "Group Insert" operator creates invalid back-to-front links from outputs to inputs.

Exact steps for others to reproduce the error
group_insert_bad_links.blend

Open attached file. Select one of the Add nodes and then the connected group node. Run the Node > Group Insert operator to move the Add node into the group. The result contains invalid links which are not correctly detected:

**Blender Version** Broken: 7f4aa0b5 Broken: 3.5.1 Worked: 3.4.1, 3.3.6 Behavior changed in fa3ca9afdb6f1ea1b709226af3f085133e5ddc2f **Short description of error** If a node is already connected to a group, inserting nodes into a group using the "Group Insert" operator creates invalid back-to-front links from outputs to inputs. **Exact steps for others to reproduce the error** [group_insert_bad_links.blend](/attachments/44310ff5-df57-4f87-917d-f78ae9ffbb7c) Open attached file. Select one of the _Add_ nodes and then the connected group node. Run the _Node > Group Insert_ operator to move the Add node into the group. The result contains invalid links which are not correctly detected: ![](/attachments/5238a6e0-9627-49ba-86b6-d38cd64e662e)
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-22 11:58:20 +02:00
Lukas Tönne added this to the Nodes & Physics project 2023-05-22 11:59:59 +02:00
Member

Can confirm, looks like a regression (does not happen in 3.3.6), will check

Can confirm, looks like a regression (does not happen in 3.3.6), will check
Philipp Oeser added
Status
Confirmed
Module
Nodes & Physics
and removed
Status
Needs Triage
labels 2023-05-22 12:05:11 +02:00
Author
Member

I suspect my own changes in #107807

I suspect my own changes in #107807
Member

I suspect my own changes in #107807

Dont think so, broke between good 50c7eb14f4 & bad 4924f8cffd

> I suspect my own changes in #107807 Dont think so, broke between good 50c7eb14f455 & bad 4924f8cffd45
Member

will do a quick bisect

will do a quick bisect
Member

Behavior changed in fa3ca9afdb

CC @HooglyBoogly

Behavior changed in fa3ca9afdb6f1ea1b709226af3f085133e5ddc2f CC @HooglyBoogly
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-05-22 12:41:02 +02:00
Iliya Katushenock self-assigned this 2023-05-22 14:44:42 +02:00

Summary of my exploration: Regression also means that this case:
image

Will not be processed (the operator simply does nothing).
I see that this operator needs to be radically redesigned (it does not do the most useful result anyway).
I can now make a quick stub to eliminate the creation of cycles.
But later already consider changing behavior dramatically.

Summary of my exploration: Regression also means that this case: ![image](/attachments/fbb5cfa2-f1e7-482f-80c4-fa09d071899a) Will not be processed (the operator simply does nothing). I see that this operator needs to be radically redesigned (it does not do the most useful result anyway). I can now make a quick stub to eliminate the creation of cycles. But later already consider changing behavior dramatically.
Iliya Katushenock changed title from Group Insert operator creates invalid links to Regression: Group Insert operator creates invalid links 2023-05-29 18:24:45 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-16 20:24:41 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-06-16 20:24:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108141
No description provided.