Fix #108141: Group Insert operator creates invalid links

Just avoid creating links to outside the group. The original
version worked a little more accurately. But still she was just
making up links (because the inline version of the graph wasn't the same anyway).
For now, this is just a workaround to work around the
problem in the new behavior caused by https://projects.blender.org/blender/blender/commit/fa3ca9afdb6f1ea1b709226af3f085133e5ddc2f .

Pull Request: https://projects.blender.org/blender/blender/pulls/108332